src/test/deca/context/invalid/without_class/incompatible_type_neq_int_bool.deca
// Description:
//    Error : operator comparison not defined with type string
//
// Result:
//    INCOMPATIBLE_TYPE_OPERATOR: Type \(.\)\+ is incompatible with type \(.\)\+ for the operator \(.\)\+
//    line 10
{
    int a = 1;
    boolean b = true;
    boolean result = a == b;
}